--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gamified Programming Tutorials</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="/docs/assets/css/style.css">
 </head>
 <body>
 <main>
     {{ content }}
 </main>
-<footer>
-    <p>Powered by Jekyll and GitHub Pages</p>
-</footer>
 </body>
 </html>
